--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div id="gallery" class="row">
         <h1>Proyectos</h1>
-        <a href="https://www.figma.com/proto/xgp5ySzwWmvvyo6NEnlM2m/Prototipo-Guilt-Free-Reto-2?node-id=1714%3A5070&scaling=scale-down&page-id=1714%3A3079" target="_blank" class="project col-12 col-md-6 col-lg-4">
+        <a href="#" target="_blank" class="project col-12 col-md-6 col-lg-4">
             <div class="row">
                 <div class="img img-1 col-12">
                     <img src="./assets/img/g1.jpeg"/>
