--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <link rel="stylesheet" href="./style.css">
 
     <title>Mao</title>
 </head>
-
-
 <body>
+
 
 <div class="container-fluid">
 
@@ -23,68 +26,159 @@
     <!-- Navbar -->
 
     <div id="navbar" class="row">
-        <div class="col">
-
-        </div>
+        <div class="col">Navbar</div>
     </div>
 
-    <!-- Hero-->
+    <!-- Hero -->
 
     <div id="hero" class="row">
         <div class="outer">
-            <div class="inner d-flex justify-content-center align-items-center">
-                <p class="title"> Mario B. Santana</p>
+            <div class="inner">
+                <p class="title">Mario B. Santana</p>
             </div>
         </div>
     </div>
 
-    <!-- Intro-->
+    <!-- Intro -->
 
     <div id="intro" class="row">
-        <p class="title col-12"> TITULO </p>
-        <p class="text col-12"> Aqui hay que poner texto </p>
-        <a href="#" target="_blank"> Texto </a>
-        <a href="mailto:donmaoccio@icloud.com"><i class="fas fa-paper-plane"></i></a>
+        <p class="title col-12">A Martial Artist and His Journey to Mastering the CODE.</p>
+        <p class="text col-12">IT manager, criminalistics and code enthusiast.</p>
+        <p class="text col-12">Currently based in Manzanillo,México.</p>
+        <p class="text col-12">A human who likes cats, martial arts and computers.</p>
+        <p class="text col-12">Tiger/Eagle Boxing Style, First Grade Disciple.  Xing Yi Quan and JKD/VTK amateur.</p>
+        <p class="text col-12">
+            Interested ?
+            <!--<a href="mailto:donmaoccio@icloud.com" style="color: #210124">donmaoccio@icloud.com</a>
 
-        <!--<a href="#"  target="_blank" class="col-2 social-link">
+            <a href="tel:+523121239455" style="color: #210124"> +52 312 123 9455</a>
+
+            <a href="https://taoshenkwoon.com/" style="color: #210124">donmaoccio@icloud.com</a>-->
+
+        </p>
+        <p class="text col-12">
+            You can see my experience here:
+            <a href="" target="_blank" style="color: #210124">CV</a>.
+        </p>
+        <p class="text col-12">
+        Find me at:
+        </p>
+
+        <a href="https://twitter.com/alleytopcat" target="_blank" class="col-2 social-link" style="color: #210124">
             <i class="fab fa-twitter"></i>
-            <span> tuitere </span>
+            <span>@alleytopcat</span>
         </a>
-        <a href="#"  target="_blank" class="col-2 social-link">
+
+        <a href="https://www.instagram.com/alleytopcat" target="_blank" class="col-2 social-link" style="color: #210124">
             <i class="fab fa-instagram"></i>
-            <span> insta </span>
-        </a>-->
+            <span>@alleytopcat</span>
+        </a>
+
+        <a href="https://taoshenkwoon.com/" target="_blank" class="col-2 social-link" style="color: #210124">
+            <i class="fas fa-yin-yang"></i>
+            <span>/TaoShenKwoon Cultural Center</span>
+        </a>
+
+        <!--
+        <p class="text col-12">
+          Entusiasta de la I+D, los negocios y la educación.
+          Actualmente residiendo en la Ciudad de México.
+          Trabajo como Director de Tecnología en una OSC para defender DD.HH.
+          Soy un mexicano inquiero que le gusta aprender y enseñar cosas creativas.
+          ¿Te interesa colaborar?/¿Interesadx en colaborar? Escríbeme a jorandradefig@gmail.com o +52 55 2896 3130.
+          Puedes conocer más de mi experiencia aquí: CV.
+        </p>
+        -->
     </div>
 
-
-    <!--Gallery-->
+    <!-- Gallery -->
 
     <div id="gallery" class="row">
-        <h1>Proyectos</h1>
-        <a href="#" target="_blank" class="project col-12 col-md-6 col-lg-4">
-            <div class="row">
-                <div class="img img-1 col-12">
-                    <img src="./assets/img/g1.jpeg"/>
+
+        <h1>Projects</h1>
+
+        <!--<a
+                href="https://twitter.com/jorandradefig"
+                target="_blank"
+                class="project col-12 col-md-6 col-lg-4"
+        >
+            <div class="row pt-3">
+                <div class="col-12">
+                    <div class="img img-1 col-12">
+                    </div>
+                    <p class="title col-12">
+                        Spotify Clone
+                    </p>
+                    <p class="detail col-12">
+                        HTML/CSS website resembling Spotify landing page.
+                    </p>
                 </div>
-                <p class="title col-12">Proyecto 1</p>
-                <p class="detail col-12">Detalles</p>
+            </div>
+        </a>-->
+
+        <a
+                href="https://netflixmx-a59d4.web.app/"
+                target="_blank"
+                class="project col-12 col-md-6 col-lg-4"
+        >
+            <div class="row pt-3">
+                <div class="col-12">
+                    <div class="img img-2 col-12">
+                    </div>
+                    <p class="title col-12">
+                        Netflix Clone
+                    </p>
+                    <p class="detail col-12">
+                        HTML/CSS website resembling Netflix landing page.
+                    </p>
+                </div>
             </div>
         </a>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-    </div>
-</div>
 
-    <!-- Footer-->
+        <a
+                href="http://www.agnajcr.com/"
+                target="_blank"
+                class="project col-12 col-md-6 col-lg-4"
+        >
+            <div class="row pt-3">
+                <div class="col-12">
+                    <div class="img img-3 col-12">
+                    </div>
+                    <p class="title col-12">
+                        JCR
+                    </p>
+                    <p class="detail col-12">
+                        Agencia Naviera JCR Official Webpage: Ship Brokers and Maersk Line Agents from Manzanillo, Colima.
+                    </p>
+                </div>
+            </div>
+        </a>
+
+    </div>
+
+    <!-- Footer -->
 
     <div id="footer" class="row">
-        <div class="col-12">
-            Footer
+        <div class="logo col-10 col-md-5 col-lg-3">
+            <p>Mario B. Santana</p>
+        </div>
+        <div class="data col-10 col-md-5 col-lg-3">
+            <a href="https://goo.gl/maps/f4K4uQPpyHhMUsdX6" target="_blank">Zlo,México</a>
+            <a href="mailto:donmaoccio@icloud.com" target="_blank">donmaoccio@icloud.com</a>
+            <a href="tel:+3121239455" target="_blank">+52 312 123 9455</a>
+        </div>
+        <div class="social col-10 col-md-5 col-lg-3">
+            <a href="https://twitter.com/alleytopcat" target="_blank" class="fab fa-twitter"></a>
+            <a href="https://www.linkedin.com/in/besmao/" target="_blank" class="fab fa-linkedin"></a>
+            <a href="https://www.instagram.com/alleytopcat" target="_blank" class="fab fa-instagram"></a>
+            <a href="https://github.com/donmaoccio" target="_blank" class="fab fa-github"></a>
         </div>
     </div>
 
+    <!-- dynamic viewport FAB-->
+
 </div>
+
 
 <!-- Optional JavaScript; choose one of the two! -->
 
@@ -97,6 +191,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 -->
 <script src="https://kit.fontawesome.com/a9d0dc1506.js" crossorigin="anonymous"></script>
-
 </body>
 </html>
