--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Intro -->
 
     <div id="intro" class="row">
-        <p class="title col-12">A Martial Artist and His Journey to Mastering the CODE.</p>
+        <p class="title col-12">A Buddhist Martial Artist's Journey to Mastering the CODE.</p>
         <p class="text col-12">IT manager, criminalistics and code enthusiast.</p>
         <p class="text col-12">Currently based in Manzanillo,México.</p>
         <p class="text col-12">A human who likes cats, martial arts and computers.</p>
