--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
     <link rel="stylesheet" href="./style.css">
 
     <title>Mao</title>
+    <link rel="icon" href="">
+
 </head>
+
+
 <body>
 
 
 <div class="container-fluid">
 
-
     <!-- Navbar -->
 
-    <div id="navbar" class="row">
+    <div id="navbar" class="row" >
         <div class="col">Navbar</div>
     </div>
 
     <!-- Hero -->
 
+    <canvas id="canvas" class="col-12 col-md-5 col-lg-3" ></canvas>
+        <h2>Mario B. Santana </h2>
+
+
+    <!--HERO SECTION WITH IMAGE INSTEAD PARTICLES
     <div id="hero" class="row">
         <div class="outer">
             <div class="inner">
@@ -42,10 +50,10 @@
     <!-- Intro -->
 
     <div id="intro" class="row">
-        <p class="title col-12">A Buddhist Martial Artist's Journey to Mastering the CODE.</p>
-        <p class="text col-12">IT manager, criminalistics and code enthusiast.</p>
-        <p class="text col-12">Currently based in Manzanillo,México.</p>
-        <p class="text col-12">A human who likes cats, martial arts and computers.</p>
+        <p class="title col-12">A Buddhist Martial Artist's Journey to Mastering THE CODE.</p>
+        <p class="text col-12">Criminalistics and code enthusiast.</p>
+        <p class="text col-12">Currently working as IT manager, based in Manzanillo, México.</p>
+        <p class="text col-12">A human who likes cats, martial arts and technology.</p>
         <p class="text col-12">Tiger/Eagle Boxing Style, First Grade Disciple.  Xing Yi Quan and JKD/VTK amateur.</p>
         <p class="text col-12">
             Interested ?
@@ -60,45 +68,39 @@
             You can see my experience here:
             <a href="" target="_blank" style="color: #210124">CV</a>.
         </p>
-        <p class="text col-12">
+        <p class="text col-18">
         Find me at:
         </p>
 
-        <a href="https://twitter.com/alleytopcat" target="_blank" class="col-2 social-link" style="color: #210124">
+        <a href="https://twitter.com/alleytopcat" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
             <i class="fab fa-twitter"></i>
-            <span>@alleytopcat</span>
+            <span style="font-weight:bold">@alleytopcat</span>
         </a>
 
-        <a href="https://www.instagram.com/alleytopcat" target="_blank" class="col-2 social-link" style="color: #210124">
+        <a href="https://www.instagram.com/alleytopcat" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
             <i class="fab fa-instagram"></i>
-            <span>@alleytopcat</span>
+            <span style="font-weight:bold">@alleytopcat</span>
         </a>
 
-        <a href="https://taoshenkwoon.com/" target="_blank" class="col-2 social-link" style="color: #210124">
+        <a href="https://taoshenkwoon.com/" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
             <i class="fas fa-yin-yang"></i>
-            <span>/TaoShenKwoon Cultural Center</span>
+            <span style="font-weight:bold">/TaoShenKwoon Cultural Center</span>
         </a>
 
-        <!--
-        <p class="text col-12">
-          Entusiasta de la I+D, los negocios y la educación.
-          Actualmente residiendo en la Ciudad de México.
-          Trabajo como Director de Tecnología en una OSC para defender DD.HH.
-          Soy un mexicano inquiero que le gusta aprender y enseñar cosas creativas.
-          ¿Te interesa colaborar?/¿Interesadx en colaborar? Escríbeme a jorandradefig@gmail.com o +52 55 2896 3130.
-          Puedes conocer más de mi experiencia aquí: CV.
-        </p>
-        -->
+
     </div>
+</div>
 
     <!-- Gallery -->
 
     <div id="gallery" class="row">
 
-        <h1>Projects</h1>
+        <h1 style="font-weight:bold">Projects</h1>
 
-        <!--<a
-                href="https://twitter.com/jorandradefig"
+
+
+        <a
+                href="#"
                 target="_blank"
                 class="project col-12 col-md-6 col-lg-4"
         >
@@ -107,14 +109,14 @@
                     <div class="img img-1 col-12">
                     </div>
                     <p class="title col-12">
-                        Spotify Clone
+                        BLANK SPACE
                     </p>
                     <p class="detail col-12">
                         HTML/CSS website resembling Spotify landing page.
                     </p>
                 </div>
             </div>
-        </a>-->
+        </a>
 
         <a
                 href="https://netflixmx-a59d4.web.app/"
@@ -172,6 +174,7 @@
             <a href="https://www.linkedin.com/in/besmao/" target="_blank" class="fab fa-linkedin"></a>
             <a href="https://www.instagram.com/alleytopcat" target="_blank" class="fab fa-instagram"></a>
             <a href="https://github.com/donmaoccio" target="_blank" class="fab fa-github"></a>
+            <a href="https://www.freecodecamp.org/donmaoccio" target="_blank" class="fab fa-free-code-camp"></a>
         </div>
     </div>
 
@@ -191,5 +194,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 -->
 <script src="https://kit.fontawesome.com/a9d0dc1506.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="canvas.js"></script>
+
 </body>
 </html>
