--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./style.css">
 
     <title>Mao</title>
-    <link rel="icon" href="">
+    <link rel="icon" href="./assets/img/logo.png">
 
 </head>
 
@@ -35,7 +35,9 @@
     <!-- Hero -->
 
     <canvas id="canvas" class="col-12 col-md-5 col-lg-3" ></canvas>
-        <h2>Mario B. Santana </h2>
+    <h2><strong>Mario B. Santana<br> <small>Developer</small></strong></h2>
+
+
 
 
     <!--HERO SECTION WITH IMAGE INSTEAD PARTICLES
@@ -162,13 +164,16 @@
 
     <div id="footer" class="row">
         <div class="logo col-10 col-md-5 col-lg-3">
+            <img src="assets/img/logo.png" height="58" width="60">
             <p>Mario B. Santana</p>
         </div>
         <div class="data col-10 col-md-5 col-lg-3">
             <a href="https://goo.gl/maps/f4K4uQPpyHhMUsdX6" target="_blank">Zlo,México</a>
             <a href="mailto:donmaoccio@icloud.com" target="_blank">donmaoccio@icloud.com</a>
             <a href="tel:+3121239455" target="_blank">+52 312 123 9455</a>
+            <br>
         </div>
+
         <div class="social col-10 col-md-5 col-lg-3">
             <a href="https://twitter.com/alleytopcat" target="_blank" class="fab fa-twitter"></a>
             <a href="https://www.linkedin.com/in/besmao/" target="_blank" class="fab fa-linkedin"></a>
