--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Mao</title>
     <link rel="icon" href="./assets/img/logo.png">
@@ -26,11 +26,35 @@
 
 <div class="container-fluid">
 
-    <!-- Navbar -->
+    <!--     nav bar -->
+    <div class="navbar">
 
-    <div id="navbar" class="row" >
-        <div class="col">Navbar</div>
+        <ul style="padding-left: 0px;">
+
+            <li class="logo"> <img src="assets/img/logo.png" height="58" width="60">   </li>
+
+            <section class="div_navbar_items">
+                <li class="navbar_items"> <a href="#canvas"> About me </a> </li>
+                <li class="navbar_items"> <a href="#intro"> Skills </a> </li>
+                <li class="navbar_items"> <a href="#gallery"> Projects </a> </li>
+                <li class="navbar_items"> <a href="#footer"> Contact </a> </li>
+            </section>
+
+            <li class="icon">
+                <button class="menu" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'));navBarFunction()" aria-label="Main Menu">
+                    <svg width="60" height="60" viewBox="0 0 100 100">
+                        <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+                        <path class="line line2" d="M 20,50 H 80" />
+                        <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+                    </svg>
+                <!--<a id="icon" href="#" onclick="navBarFunction()"> &#9776;</a>-->
+            </li>
+        </ul>
     </div>
+</div>
+    <!--         closing navbar  -->
+
+    <!--Mobile NAVBAR-->
 
     <!-- Hero -->
 
@@ -199,7 +223,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 -->
 <script src="https://kit.fontawesome.com/a9d0dc1506.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="canvas.js"></script>
+<script type="text/javascript" src="./js/canvas.js"></script>
+<script src="./js/scripts.js"></script>
 
 </body>
 </html>
