--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <li class="logo"> <img src="assets/img/logo.png" height="58" width="60">   </li>
 
             <section class="div_navbar_items">
-                <li class="navbar_items"> <a href="#canvas"> About me </a> </li>
-                <li class="navbar_items"> <a href="#intro"> Skills </a> </li>
+                <li class="navbar_items"> <a href="#canvas"> Home </a> </li>
+                <li class="navbar_items"> <a href="#intro"> About Me </a> </li>
                 <li class="navbar_items"> <a href="#gallery"> Projects </a> </li>
                 <li class="navbar_items"> <a href="#footer"> Contact </a> </li>
             </section>
@@ -47,167 +47,175 @@
                         <path class="line line2" d="M 20,50 H 80" />
                         <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
                     </svg>
-                <!--<a id="icon" href="#" onclick="navBarFunction()"> &#9776;</a>-->
+                    <!--<a id="icon" href="#" onclick="navBarFunction()"> &#9776;</a>-->
             </li>
         </ul>
     </div>
 </div>
-    <!--         closing navbar  -->
+<!--         closing navbar  -->
 
-    <!--Mobile NAVBAR-->
+<!--Mobile NAVBAR-->
 
-    <!-- Hero -->
+<!-- Hero -->
 
-    <canvas id="canvas" class="col-12 col-md-5 col-lg-3" ></canvas>
-    <h2><strong>Mario B. Santana<br> <small>Developer</small></strong></h2>
-
-
+<canvas id="canvas" class="col-12 col-md-5 col-lg-3" ></canvas>
+<h2><strong>Mario B. Santana<br> <small>Developer</small></strong></h2>
 
 
-    <!--HERO SECTION WITH IMAGE INSTEAD PARTICLES
-    <div id="hero" class="row">
-        <div class="outer">
-            <div class="inner">
-                <p class="title">Mario B. Santana</p>
-            </div>
+
+
+<!--HERO SECTION WITH IMAGE INSTEAD PARTICLES
+<div id="hero" class="row">
+    <div class="outer">
+        <div class="inner">
+            <p class="title">Mario B. Santana</p>
         </div>
-    </div>
-
-    <!-- Intro -->
-
-    <div id="intro" class="row">
-        <p class="title col-12">A Buddhist Martial Artist's Journey to Mastering THE CODE.</p>
-        <p class="text col-12">Criminalistics and code enthusiast.</p>
-        <p class="text col-12">Currently working as IT manager, based in Manzanillo, México.</p>
-        <p class="text col-12">A human who likes cats, martial arts and technology.</p>
-        <p class="text col-12">Tiger/Eagle Boxing Style, First Grade Disciple.  Xing Yi Quan and JKD/VTK amateur.</p>
-        <p class="text col-12">
-            Interested ?
-            <!--<a href="mailto:donmaoccio@icloud.com" style="color: #210124">donmaoccio@icloud.com</a>
-
-            <a href="tel:+523121239455" style="color: #210124"> +52 312 123 9455</a>
-
-            <a href="https://taoshenkwoon.com/" style="color: #210124">donmaoccio@icloud.com</a>-->
-
-        </p>
-        <p class="text col-12">
-            You can see my experience here:
-            <a href="" target="_blank" style="color: #210124">CV</a>.
-        </p>
-        <p class="text col-18">
-        Find me at:
-        </p>
-
-        <a href="https://twitter.com/alleytopcat" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
-            <i class="fab fa-twitter"></i>
-            <span style="font-weight:bold">@alleytopcat</span>
-        </a>
-
-        <a href="https://www.instagram.com/alleytopcat" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
-            <i class="fab fa-instagram"></i>
-            <span style="font-weight:bold">@alleytopcat</span>
-        </a>
-
-        <a href="https://taoshenkwoon.com/" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
-            <i class="fas fa-yin-yang"></i>
-            <span style="font-weight:bold">/TaoShenKwoon Cultural Center</span>
-        </a>
-
-
     </div>
 </div>
 
-    <!-- Gallery -->
+<!-- Intro -->
 
-    <div id="gallery" class="row">
+<div id="intro" class="row">
+    <p class="title col-12">A Buddhist Martial Artist's Journey to Mastering THE CODE.</p>
+    <p class="text col-12">Criminalistics and code enthusiast.</p>
+    <p class="text col-12">Currently working as IT manager, based in Manzanillo, México.</p>
+    <p class="text col-12">A human who likes cats, martial arts and technology.</p>
+    <p class="text col-12">Tiger/Eagle Fist, Xing Yi Quan and JKD/VTK amateur, First Grade Disciple.</p>
 
-        <h1 style="font-weight:bold">Projects</h1>
+    <!--<a href="mailto:donmaoccio@icloud.com" style="color: #210124">donmaoccio@icloud.com</a>
+
+    <a href="tel:+523121239455" style="color: #210124"> +52 312 123 9455</a>
+
+    <a href="https://taoshenkwoon.com/" style="color: #210124">donmaoccio@icloud.com</a>-->
+
+    </p>
+    <p class="text col-12">
+        Interested ? You can see my experience here:
+        <a href="" target="_blank" style="color: #210124">CV</a>.
+    </p>
+    <p class="text col-18">
+        Find me at:
+    </p>
+
+    <a href="https://twitter.com/alleytopcat" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
+        <i class="fab fa-twitter"></i>
+        <span style="font-weight:bold">@alleytopcat</span>
+    </a>
+
+    <a href="https://www.instagram.com/alleytopcat" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
+        <i class="fab fa-instagram"></i>
+        <span style="font-weight:bold">@alleytopcat</span>
+    </a>
+
+    <a href="https://taoshenkwoon.com/" target="_blank" class="col-10 col-md-5 col-lg-3 social-link" style="color: #210124">
+        <i class="fas fa-yin-yang"></i>
+        <span style="font-weight:bold">/TaoShenKwoon Cultural Center</span>
+    </a>
+
+
+</div>
+</div>
+
+<!-- Gallery -->
+
+<div id="gallery" class="row">
+
+    <h1 style="font-weight:bold">Projects</h1>
 
 
 
-        <a
-                href="#"
-                target="_blank"
-                class="project col-12 col-md-6 col-lg-4"
-        >
-            <div class="row pt-3">
-                <div class="col-12">
-                    <div class="img img-1 col-12">
-                    </div>
-                    <p class="title col-12">
-                        BLANK SPACE
-                    </p>
-                    <p class="detail col-12">
-                        HTML/CSS website resembling Spotify landing page.
-                    </p>
+    <a
+            href="galleryindex.html"
+
+            class="project col-12 col-md-6 col-lg-4"
+    >
+        <div class="row pt-3">
+            <div class="col-12">
+                <div class="img img-1 col-12">
                 </div>
+                <p class="title col-12">
+                    Gallery
+                </p>
+                <p class="detail col-12">
+                    A reward for a lifetime's work.
+                </p>
             </div>
-        </a>
+        </div>
+    </a>
 
-        <a
-                href="https://netflixmx-a59d4.web.app/"
-                target="_blank"
-                class="project col-12 col-md-6 col-lg-4"
-        >
-            <div class="row pt-3">
-                <div class="col-12">
-                    <div class="img img-2 col-12">
-                    </div>
-                    <p class="title col-12">
-                        Netflix Clone
-                    </p>
-                    <p class="detail col-12">
-                        HTML/CSS website resembling Netflix landing page.
-                    </p>
+    <a
+            href="https://netflixmx-a59d4.web.app/"
+            target="_blank"
+            class="project col-12 col-md-6 col-lg-4"
+    >
+        <div class="row pt-3">
+            <div class="col-12">
+                <div class="img img-2 col-12">
                 </div>
+                <p class="title col-12">
+                    Netflix Clone
+                </p>
+                <p class="detail col-12">
+                    HTML/CSS website resembling Netflix landing page.
+                </p>
             </div>
-        </a>
+        </div>
+    </a>
 
-        <a
-                href="http://www.agnajcr.com/"
-                target="_blank"
-                class="project col-12 col-md-6 col-lg-4"
-        >
-            <div class="row pt-3">
-                <div class="col-12">
-                    <div class="img img-3 col-12">
-                    </div>
-                    <p class="title col-12">
-                        JCR
-                    </p>
-                    <p class="detail col-12">
-                        Agencia Naviera JCR Official Webpage: Ship Brokers and Maersk Line Agents from Manzanillo, Colima.
-                    </p>
+    <a
+            href="http://www.agnajcr.com/"
+            target="_blank"
+            class="project col-12 col-md-6 col-lg-4"
+    >
+        <div class="row pt-3">
+            <div class="col-12">
+                <div class="img img-3 col-12">
                 </div>
+                <p class="title col-12">
+                    JCR
+                </p>
+                <p class="detail col-12">
+                    Agencia Naviera JCR Official Webpage: Ship Brokers and Maersk Line Agents from Manzanillo, Colima.
+                </p>
             </div>
-        </a>
+        </div>
+    </a>
+
+</div>
+
+<!-- Footer -->
+
+<div id="footer" class="row">
+    <div class="logo col-10 col-md-5 col-lg-3">
+        <img src="assets/img/logo.png" height="58" width="60">
+        <p>Mario B. Santana</p>
+    </div>
+    <div class="data col-10 col-md-5 col-lg-3">
+        <a href="https://goo.gl/maps/f4K4uQPpyHhMUsdX6" target="_blank">Zlo,México</a>
+        <a href="mailto:donmaoccio@icloud.com" target="_blank">donmaoccio@icloud.com</a>
+        <a href="tel:+3121239455" target="_blank">+52 312 123 9455</a>
+        <br>
+        <br>
 
     </div>
 
-    <!-- Footer -->
-
-    <div id="footer" class="row">
-        <div class="logo col-10 col-md-5 col-lg-3">
-            <img src="assets/img/logo.png" height="58" width="60">
-            <p>Mario B. Santana</p>
-        </div>
-        <div class="data col-10 col-md-5 col-lg-3">
-            <a href="https://goo.gl/maps/f4K4uQPpyHhMUsdX6" target="_blank">Zlo,México</a>
-            <a href="mailto:donmaoccio@icloud.com" target="_blank">donmaoccio@icloud.com</a>
-            <a href="tel:+3121239455" target="_blank">+52 312 123 9455</a>
-            <br>
-        </div>
-
-        <div class="social col-10 col-md-5 col-lg-3">
-            <a href="https://twitter.com/alleytopcat" target="_blank" class="fab fa-twitter"></a>
-            <a href="https://www.linkedin.com/in/besmao/" target="_blank" class="fab fa-linkedin"></a>
-            <a href="https://www.instagram.com/alleytopcat" target="_blank" class="fab fa-instagram"></a>
-            <a href="https://github.com/donmaoccio" target="_blank" class="fab fa-github"></a>
-            <a href="https://www.freecodecamp.org/donmaoccio" target="_blank" class="fab fa-free-code-camp"></a>
-        </div>
+    <div class="social col-10 col-md-5 col-lg-3">
+        <a href="https://twitter.com/alleytopcat" target="_blank" class="fab fa-twitter"></a>
+        <a href="https://www.linkedin.com/in/besmao/" target="_blank" class="fab fa-linkedin"></a>
+        <a href="https://www.instagram.com/alleytopcat" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://github.com/donmaoccio" target="_blank" class="fab fa-github"></a>
+        <a href="https://www.freecodecamp.org/donmaoccio" target="_blank" class="fab fa-free-code-camp"></a>
     </div>
+</div>
 
-    <!-- dynamic viewport FAB-->
+<div class="row">
+    <div class="copyright pt-5 col-12 text-center">
+        <p class="small tm-copyright-text" style="font-size: medium"> © <span class="tm-current-year">2021</span> Mario B. Santana/Mao All Rights Reserved.
+        </p>
+    </div>
+</div>
+
+<!-- dynamic viewport FAB-->
 
 </div>
 
