--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 <!-- Intro -->
 
 <div id="intro" class="row">
-    <p class="title col-12">A Buddhist Martial Artist's Journey to Mastering THE CODE.</p>
+    <p class="title col-12">A Martial Artist's Journey to Mastering THE CODE.</p>
     <p class="text col-12">Criminalistics and code enthusiast.</p>
     <p class="text col-12">Currently working as IT manager, based in Manzanillo, México.</p>
     <p class="text col-12">A human who likes cats, martial arts and technology.</p>
-    <p class="text col-12">Tiger/Eagle Fist, Xing Yi Quan and JKD/VTK amateur, First Grade Disciple.</p>
+    <p class="text col-12">Tiger Fist Disciple. Xing Yi Quan and JKD/VTK amateur.</p>
 
     <!--<a href="mailto:donmaoccio@icloud.com" style="color: #210124">donmaoccio@icloud.com</a>
 
